--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.heading-container{
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid black;
+  width: 500px;
+  border-block: solid;
+  writing-mode: horizontal-tb;
+  border-radius: 20px;
+  box-shadow: 6px 6px 2px 1px rgba(186, 215, 97, 0.2);
+}
+.app-title{
+  text-align: center;
+  font-size: 40px;
+  margin: 0px;
 }
 
-.App-link {
-  color: #61dafb;
+.search-container{
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  border-radius: 10px;
+  border: 1px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img-location{
+  height: 50px;
+  width: 50px;
+  margin: 10px;
+}
+.input-city{
+  height: 50px;
+  width: 80%;
+  border: none !important;
+  font-size: 40px;
+}
+
+.input-city:focus{
+  outline: none;
 }
