--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,16 @@
 .input-city:focus{
   outline: none;
 }
+
+.weather-container{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid black;
+  margin-top:50px;
+  border-radius:10px;
+  width:40%;
+  height:200px;
+}
