--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
   margin: 10px;
 }
 .input-city{
+  background-color: white;
   height: 50px;
   width: 80%;
   border: none !important;
@@ -79,7 +80,8 @@
   writing-mode: horizontal-tb;
 }
 
-.city{
+.city{ 
+  background-color: white;
   margin-left: auto;
   margin-right: 10px;
   border:1px solid black;
@@ -88,9 +90,10 @@
   width: 300px;
   border-radius: 10px;
   padding: 4px;
-  box-shadow: inset 0em -10px 4px #088bf0;
+  box-shadow: inset 0em -10px 4px #4eddfa;
 }
 .city-tempreture{
+  background-color: white;
   margin-left: auto;
   margin-right: 10px;
   border:1px solid black;
@@ -102,6 +105,7 @@
   box-shadow: inset 0em -10px 7px #ffc300;
 }
 .city-description{
+  background-color: white;
   margin-left: auto;
   margin-right: 10px;
   border:1px solid black;
